--- a/client/src/components/Filter/Filter.module.css
+++ b/client/src/components/Filter/Filter.module.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+
 .containerFilter {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: left;
   position: fixed;
-  top: center;
+  top: 20vh;
   left: -50rem;
   width: 12rem;
   background: rgba(255, 255, 255, 0.3);
@@ -22,7 +24,7 @@
   justify-content: space-evenly;
   align-items: left;
   position: fixed;
-  top: center;
+  top: 20vh;
   left: 0;
   width: 12rem;
   background: rgba(64, 144, 156, 0.3);
@@ -39,6 +41,7 @@
 .segmento {
   color: rgb(255, 255, 255);
   font-family: "Carter One", cursive;
+  font-size: 1.1rem;
   text-shadow: 2px 2px 5px #4e31aa;
 }
 
@@ -49,7 +52,7 @@
 }
 
 .selectorType {
-  font-family: "Ubuntu", cursive;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 600;
   width: 100%;
   height: 2rem;
@@ -57,16 +60,17 @@
 }
 
 .reset {
+  align-self: center;
   color: white;
   background-color: black;
+  width: 50%;
   cursor: pointer;
   border: none;
-  padding: 0.8rem 1.2rem;
+  padding: 0.5rem 0.5rem;
   font-size: 1rem;
   font-weight: 600;
   position: relative;
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-radius: 0.5rem;
   transition: all 0.2s ease;
 }
 
