--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -13,15 +13,15 @@
 
 .searchContainer {
   display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 1rem;
 }
 
 .logo {
   width: 10rem;
   height: 4rem;
   object-fit: cover;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
   transition: all 0.3s ease;
 }
 
@@ -49,8 +49,16 @@
     width: 80%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     margin: 0 auto;
+  }
+  .searchContainer {
+    margin: 0 auto;
+  }
+  .logo {
+    width: 7rem;
+    height: 3rem;
+    margin-top: 1rem;
   }
 }
 
