--- a/client/src/views/Form/Form.module.css
+++ b/client/src/views/Form/Form.module.css
@@ -26,34 +26,33 @@
   align-items: start;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin-top: 2rem;
+  margin-top: 1rem;
   position: relative;
 }
 
 .containerFormActive::after {
-  content:'';
-  background-color: rgba(0, 0, 0, .7);
+  content: "";
+  background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 150%;
 }
 
 .pokebola {
   width: 60%;
   height: auto;
+  margin-top: 2rem;
 }
 
 .formulario {
-  width: 20rem;
+  width: 17rem;
   background: rgba(255, 255, 255, 0.3);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   border: 1.5px solid rgba(209, 213, 219, 0.3);
   padding: 2rem;
   border-radius: 1rem;
-  margin-top: 2em;
+  margin: 2em 0;
 }
 
 .legend {
@@ -61,8 +60,8 @@
   text-align: center;
   font-family: "Carter One", cursive;
   font-weight: 800;
-  font-size: 1.3rem;
-  margin: 2em 0;
+  font-size: 1.5rem;
+  margin: 0 0;
 }
 em {
   color: #4e31aa;
