--- a/client/src/views/Landing/Landing.module.css
+++ b/client/src/views/Landing/Landing.module.css
@@ -1,47 +1,15 @@
 .landingContenedor {
-  background-image: url("../../Imgs/landing.gif");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-  overflow-x: hidden;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  gap: 2em;
   align-items: center;
-}
-.landingContenedor::after {
-  content: "";
-  background-color: rgba(0, 0, 0, 0.8);
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
 }
 
 .texto {
   align-self: baseline;
   margin-left: 3rem;
+  margin-top: 1rem;
   z-index: 2;
-}
-
-.uno {
-  margin: 0;
-  display: block;
-  text-transform: uppercase;
-  font-size: 2rem;
-  font-family: "Pokemon Solid", sans-serif;
-  line-height: 150%;
-  letter-spacing: 5px;
-  white-space: nowrap;
-  border-right: 4px solid;
-  width: 22ch;
-  color: white;
-  -webkit-text-stroke: 1px rgb(0, 0, 0);
-  animation: typing 2s steps(22), blink 0.3s infinite step-end alternate;
-  overflow: hidden;
 }
 
 .dos {
@@ -94,6 +62,27 @@ strong {
   color: #4e31aa;
 }
 
+.galeria {
+  display: flex;
+  width: 100%;
+  height: 30rem;
+}
+.galeria img {
+  width: 0px;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: 0.8;
+  transition: 0.3s ease;
+}
+
+.galeria img:hover {
+  cursor: pointer;
+  width: 50%;
+  height: auto;
+  opacity: 1;
+  filter: contrast(120%);
+}
+
 .resplandor {
   z-index: 1;
   text-decoration: none;
@@ -103,7 +92,7 @@ strong {
   cursor: pointer;
   border: none;
   padding: 0.8rem 1.2rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 800;
   position: relative;
   border-radius: 0.5rem;
