--- a/client/src/views/Update/Update.module.css
+++ b/client/src/views/Update/Update.module.css
@@ -26,10 +26,8 @@
   content: "";
   background-color: rgba(0, 0, 0, 0.8);
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 190%;
 }
 
 .contenido {
