--- a/client/src/views/Form/Form.module.css
+++ b/client/src/views/Form/Form.module.css
@@ -118,7 +118,7 @@ em {
 
 .seleccionar {
   width: 100%;
-  height: 8em;
+  height: 8rem;
   font-size: 1rem;
   border-radius: 0.5rem;
   padding-left: 0.5rem;
