--- a/client/src/views/About/About.module.css
+++ b/client/src/views/About/About.module.css
@@ -40,7 +40,7 @@
 }
 .acerca {
   color: white;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-family: "Carter One", cursive;
   text-shadow: 2px 2px 5px rgb(0, 0, 0);
   margin: 0;
@@ -49,7 +49,7 @@
 .palabras {
   overflow-wrap: break-word;
   font-family: "Ubuntu", sans-serif;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .nombre {
@@ -59,6 +59,7 @@
   text-shadow: 2px 2px 5px rgb(0, 0, 0);
   text-align: right;
   font-size: 1.5rem;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 1050px) {
@@ -67,7 +68,7 @@
     flex-direction: column;
     align-items: center;
     width: 20rem;
-    height: 90vh;
+    height: 95vh;
   }
   .imagen {
     width: 20rem;
