--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -1,9 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 
+.padre {
+  display: flex;
+  flex-direction: column;
+}
+
 .busquedaContenedor {
   display: flex;
   flex-direction: row;
-  margin: 1rem 0;
+  margin: 1rem 0 0 0;
   align-items: center;
 }
 
@@ -18,10 +23,41 @@
   height: 2.8rem;
   padding-left: 0.8rem;
 }
+.dropdown {
+  display: flex;
+  color: #323131;
+  position: fixed;
+  top: 3.8rem;
+  flex-direction: column;
+  background: rgb(255, 255, 255);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  width: 15.9rem;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  font-size: 1.1rem;
+  border-radius: 0 0 0.5rem 0.5rem;
+}
+.dropdown:empty {
+  border: none;
+}
+
+.dropdownRow {
+  position: relative;
+  cursor: pointer;
+  text-align: start;
+  margin: 0 2.5rem;
+}
+.dropdownRow:last-child {
+  margin-bottom: 0.5rem;
+}
 
 @media screen and (max-width: 1050px) {
   .inputSearch {
     width: 8rem;
+  }
+  .dropdown {
+    width: 9.9rem;
   }
 }
 
